--- a/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
@@ -135,18 +135,19 @@ redshifts by about $0.03$ for halos in the low-redshift range ($z\leq
 0.4$).  For halos at $0.4<z\leq 0.85$, the relative redshift bias is below
 $0.5\%$.
 
-We select peaks with values greater than an ad-hoc threshold as candidates of
-galaxy clusters following \citet{HSC1-massMap-cluster}.  The threshold is set
-to a few times the standard deviation of the noise peaks. We use different
-detection thresholds ($1.5\sigma$ and $3.0\sigma$) to detect galaxy clusters
-from the mass maps reconstructed with $\lambda=3.5,4.0,5.0$. The left and
-middle columns of Figure \ref{fig_detFalsRateNFW} show the detection rates for
-halos in the (mass, redshift) planes with detection thresholds set to
-$1.5\sigma$ and $3.0\sigma$ of the noise peaks' distributions, respectively.
-The right column of Figure \ref{fig_detFalsRateNFW} shows the corresponding
-numbers of false detections per square degree as functions of detection
-thresholds. The first, second, and third rows of Figure
-\ref{fig_detFalsRateNFW} correspond to the $lambda=3.5,4.0,5.0$, respectively.
+With the intent to suppress false detections, we select peaks with values
+greater than an ad-hoc threshold as candidates of galaxy clusters following
+\citet{HSC1-massMap-cluster}.  The threshold is set to a few times the standard
+deviation of the noise peaks. We use different detection thresholds
+($1.5\sigma$ and $3.0\sigma$) to detect galaxy clusters from the mass maps
+reconstructed with $\lambda=3.5,4.0,5.0$. The left and middle columns of Figure
+\ref{fig_detFalsRateNFW} show the detection rates for halos in the (mass,
+redshift) planes with detection thresholds set to $1.5\sigma$ and $3.0\sigma$
+of the noise peaks' distributions, respectively.  The right column of Figure
+\ref{fig_detFalsRateNFW} shows the corresponding numbers of false detections
+per square degree as functions of detection thresholds. The first, second, and
+third rows of Figure \ref{fig_detFalsRateNFW} correspond to the
+$lambda=3.5,4.0,5.0$, respectively.
 
 Figure \ref{fig_detFalsRateNFW} tells that the false peak density is suppressed
 as the detection threshold increases. Also, the detection rate of halo
