Papers to read (science) 	new file:   doc/ref/clusterDet_weaklens.md Pixelation has to be changed to     pix -> smooth instead of     smooth -> pix since the previous operation is too slow. Now we can use FFT to smooth after pixelation. TODO: How much aliasing power is caused? 	modified:   notebook/s19/pixelation.ipynb 	modified:   python/haloSim.py 	modified:   python/halolet.py 	modified:   python/pixel3D.py

--- a/notebook/s19/prepare_poz_stack.ipynb
+++ b/notebook/s19/prepare_poz_stack.ipynb
@@ -327,10 +327,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cupy as cp\n",
+    "import cupyx.scipy.ndimage as ndimage"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=cp.random.rand(5)\n",
+    "b=cp.random.rand(3)\n",
+    "ndimage.convolve1d(a, b, mode='constant')"
+   ]
   }
  ],
  "metadata": {
