--- a/doc/paper_ms_method_HSCY1/ms.tex
+++ b/doc/paper_ms_method_HSCY1/ms.tex
@@ -114,8 +114,11 @@ a direct probe into the mass density distribution in our universe
 
 The expected shear measurements ($\gamma$) on distant galaxies are related to
 the foreground density contrast field ($\delta$) through a linear
-transformation: \begin{equation} \label{eq-intro-delta2shear} \gamma=\mathbf{T}
-\delta, \end{equation} where $\mathbf{T}$ is used to denote the linear
+transformation:
+\begin{equation} \label{eq-intro-delta2shear}
+    \gamma=\mathbf{T} \delta,
+\end{equation}
+where $\mathbf{T}$ is used to denote the linear
 transformation operator, which includes not only the physical lensing effect but
 also systematic effects from observations (e.g., pixelization and smoothing of
 the shear field in the transverse plane, photo-$z$ uncertainty).
