--- a/notebook/s19/prepare_poz_stack.ipynb
+++ b/notebook/s19/prepare_poz_stack.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XMM\n",
-      "GAMA09H\n"
+      "XMM\n"
      ]
     },
     {
@@ -67,16 +66,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WIDE12H\n",
-      "GAMA15H\n"
+      "GAMA09H\n",
+      "WIDE12H\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
-      "  if sys.path[0] == '':\n",
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  if sys.path[0] == '':\n",
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
@@ -87,16 +84,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VVDS\n",
+      "GAMA15H\n",
+      "VVDS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  if sys.path[0] == '':\n",
+      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "HECTOMAP\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
-      "  if sys.path[0] == '':\n"
      ]
     }
    ],
@@ -156,16 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XMM\n",
-      "GAMA09H\n",
-      "WIDE12H\n"
+      "XMM\n"
      ]
     },
     {
@@ -174,6 +178,22 @@
      "text": [
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  \n",
+      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAMA09H\n",
+      "WIDE12H\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  \n",
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
@@ -193,8 +213,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
-      "  \n",
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  \n",
       "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:14: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
@@ -224,9 +242,10 @@
     "nbin=100\n",
     "for fieldname in mutilities.field_names:\n",
     "    print(fieldname)\n",
-    "    poz_ave=pyfits.getdata('%s_dnnz_10_bins.fits' %fieldname)\n",
+    "    poz_ave=pyfits.getdata(os.path.join(outDir,'%s_dnnz_10_bins.fits' %fieldname))\n",
     "    lensKernel1= gridInfo.lensing_kernel()\n",
     "    lensKernel2= gridInfo.lensing_kernel(poz_grids=pozB,poz_ave=poz_ave)\n",
+    "    pyfits.writeto(os.path.join(outDir,'%s_dnnz_10_bins_lensKer.fits' %fieldname),lensKernel2,overwrite=True)\n",
     "    plotLensKernel(fieldname,gridInfo.zcgrid,lensKernel1,lensKernel2,'%s_dnnz_10_bins_lensKer.png' %fieldname)"
    ]
   },
