Add reading notes 	modified:   doc/ref/clusterDet_weaklens.md Test mock/std/pix/reconstruct on a stmall region 200 arcmin x 200 arcmin 	modified:   notebook/s19/reconstruct-3D-1cut.ipynb Add explanations 	modified:   python/haloSim.py 	modified:   python/halolet.py Add non-negative lasso 	modified:   python/sparseBase.py

--- a/notebook/s19/prepare_smallcat.ipynb
+++ b/notebook/s19/prepare_smallcat.ipynb
@@ -21,21 +21,43 @@
     "import numpy as np\n",
     "import astropy.io.fits as pyfits\n",
     "import astropy.table as astTab\n",
-    "import massmap_utilities as mutilities"
+    "import massmap_utilities as mapUtil"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.38591516\n",
+      "0.38806241421957616\n"
+     ]
+    }
+   ],
    "source": [
-    "colnames=['ra','dec','g1','g2','weight','bias_m','dnn_zbest','dnn_zbest_std','dnn_zbest_conf']"
+    "if False:\n",
+    "    fieldname='XMM'\n",
+    "    data=pyfits.getdata('datDir/catalog_obs_reGaus_no_m/%s_no_m.fits' %fieldname)\n",
+    "    print(np.average(data['i_hsmshaperegauss_e1']**2.+data['i_hsmshaperegauss_e2']**2.))\n",
+    "    print(np.average(1./data['i_hsmshaperegauss_derived_weight'])*2.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames=['tract','Id','ra','dec','g1','g2','weight','bias_m','dnn_zbest','dnn_zbest_std','dnn_zbest_conf']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +86,7 @@
     }
    ],
    "source": [
-    "for fieldname in mutilities.field_names:\n",
+    "for fieldname in mapUtil.field_names:\n",
     "    print(fieldname)\n",
     "    data=pyfits.getdata('datDir/catalog_obs_reGaus_no_m/%s_no_m.fits' %fieldname)\n",
     "    ra=data['i_ra']\n",
@@ -72,6 +94,8 @@
     "    e1      =   data['i_hsmshaperegauss_e1']\n",
     "    e2      =   data['i_hsmshaperegauss_e2']\n",
     "    m_b     =   np.zeros(len(data))\n",
+    "    Id      =   data['object_id']\n",
+    "    tract   =   data['tract']\n",
     "    c1_b    =   data['i_hsmshaperegauss_derived_shear_bias_c1']\n",
     "    c2_b    =   data['i_hsmshaperegauss_derived_shear_bias_c2']\n",
     "    weight  =   data['i_hsmshaperegauss_derived_weight']\n",
@@ -85,12 +109,12 @@
     "    print('multiplicative bias: %s' %m_bA)\n",
     "    g1      =   1./(1.+m_bA)*(e1/2./Res_A-c1_b)\n",
     "    g2      =   1./(1.+m_bA)*(e2/2./Res_A-c2_b)\n",
-    "    dataOut=astTab.Table(names=colnames,data=[ra,dec,g1,g2,weight,m_b,dnnzBest,dnnzStd,dnnzConf])\n",
+    "    dataOut=astTab.Table(names=colnames,data=[tract,Id,ra,dec,g1,g2,weight,m_b,dnnzBest,dnnzStd,dnnzConf])\n",
     "    dataOut.meta.update({'ra_min':np.min(ra)})\n",
     "    dataOut.meta.update({'dec_min':np.min(dec)})\n",
     "    dataOut.meta.update({'ra_max':np.max(ra)})\n",
     "    dataOut.meta.update({'dec_max':np.max(dec)})\n",
-    "    dataOut.write('wrkDir/reGaus_catalog/%s.fits' %fieldname)\n",
+    "    dataOut.write('wrkDir/reGaus_catalog/%s.fits' %fieldname,overwrite=True)\n",
     "    if False:\n",
     "        break\n",
     "    else:\n",
